# salmon-run-notifier

./: .gitignore  Dockerfile  build_and_run.bat  compose.yaml  main.py  pyproject.toml  readme.md  requirements.txt  run_docker_compose.bat  salmon_config_template.toml  salmon_run_notifier.spec
.github/workflows/: docker-publish.yml  pyinstaller_build.yml
resources/: salmon_config_template.toml
